--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">UCP2</string>
+    <string name="nama">Nama Mahasiswa</string>
+    <string name="nim">NIM</string>
+    <string name="konsentrasi">Konsentrasi</string>
+    <string name="judul">Judul Skripsi</string>
+    <string name="dosenpem1">Dosen Pembimbing 1</string>
+    <string name="dosenpem2">Dosen Pembimbing 2</string>
+    <string name="dosen1">Haris Setiawan</string>
+    <string name="dosen2">Dwijoko P</string>
+    <string name="dosen3">Aprilia Kurnianti</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
+
 </resources>
